Build Java v2 assessment baseline